Se creó con Colab

--- a/ProyectoDS_ParteI_Alejandro_Meschini p2.ipynb
+++ b/ProyectoDS_ParteI_Alejandro_Meschini p2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXcYewjczqVyf2sD3QYoFb",
+      "authorship_tag": "ABX9TyNTTQg5RpIBWt7ndSdkx9/h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
         "id": "Otl2ZxWGmQq7",
         "outputId": "034595d9-cecf-46df-f137-537c16092d52"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1221,7 +1221,7 @@
           "height": 839
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1276,7 +1276,7 @@
       "metadata": {
         "id": "BkNSxXkAm38k"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1316,7 +1316,7 @@
       "metadata": {
         "id": "IzKPmvf6n-gz"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1344,7 +1344,7 @@
       "metadata": {
         "id": "Gi62L5GKoZFn"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1359,7 +1359,7 @@
       "metadata": {
         "id": "6OOrFDFlnEI6"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1424,7 +1424,7 @@
         "id": "ZSevRSKiovvJ",
         "outputId": "6cc3f22f-5947-4a80-d189-88c41f065d19"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1473,7 +1473,7 @@
       "metadata": {
         "id": "C3OOaUM0Z7Ct"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1529,7 +1529,7 @@
       "metadata": {
         "id": "Gfvj7qFwaOEt"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1556,7 +1556,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1685,7 +1685,7 @@
           "height": 507
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1698,6 +1698,40 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conclusiones del análisis comparativo\n",
+        "\n",
+        "🔹 La regresión lineal con RFE (selección de variables) fue la que mostró el mejor desempeño relativo, con un R² menos negativo y un RMSE ligeramente inferior al de los modelos más complejos.\n",
+        "\n",
+        "Esto sugiere que el conjunto de variables originales contiene bastante ruido o colinealidad, y que reducirlo ayudó a la estabilidad del modelo.\n",
+        "\n",
+        "🔹 Los modelos Random Forest y XGBoost no lograron mejorar el ajuste, probablemente por:\n",
+        "\n",
+        "La escasa cantidad de datos o variabilidad limitada.\n",
+        "\n",
+        "Presencia de ruido o valores atípicos (que aún no habíamos filtrado).\n",
+        "\n",
+        "Una posible relación no lineal débil entre las variables predictoras y el precio.\n",
+        "\n",
+        "🔹 El R² negativo indica que los modelos no explican bien la variación del precio: predicen peor que una línea base que use simplemente el promedio del precio.\n",
+        "\n",
+        "🔹 El MAE entre 6.000 y 6.800 USD refleja un error promedio alto en términos absolutos — podría ser aceptable solo si el rango de precios es amplio (por ejemplo, entre 10.000 y 100.000 USD), pero de lo contrario se considera un error considerable."
+      ],
+      "metadata": {
+        "id": "IXBvTpqIjJt1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "u0AIX1eDjR5W"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
