Se creó con Colab

--- a/ProyectoDS_ParteI_Alejandro_Meschini p2.ipynb
+++ b/ProyectoDS_ParteI_Alejandro_Meschini p2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTTQg5RpIBWt7ndSdkx9/h",
+      "authorship_tag": "ABX9TyNAD+K0O5EBqPRWdLGicW2k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1661,6 +1661,8 @@
         "    'RMSE': [8186.30, 8225.91, 8462.83]\n",
         "})\n",
         "\n",
+        "print(df_results)\n",
+        "\n",
         "# --- 2. Graficar ---\n",
         "plt.figure(figsize=(9,5))\n",
         "sns.barplot(\n",
@@ -1679,14 +1681,24 @@
       ],
       "metadata": {
         "id": "TVQs5K_dclIs",
-        "outputId": "ab10d038-d144-43a9-f0eb-f38d4c6a6333",
+        "outputId": "9d377eb1-1748-4a1c-e8e1-0e25ae1372ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 507
+          "height": 576
         }
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                   Modelo      R²      MAE     RMSE\n",
+            "0  Regresión Lineal + RFE -0.0483  6609.14  8186.30\n",
+            "1           Random Forest -0.1844  6492.77  8225.91\n",
+            "2                 XGBoost -0.2540  6782.96  8462.83\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
